2012-08-01  Earnie Boyd  <earnie@users.sourceforge.net>

	Correct MENUITEMINFO structure definition per issue [#1659].

	* include/winuser.h (tagMENUITEMINFOA, tagMENUITEMINFOW): dwItemData
	field was defined as type DWORD; correct it to type ULONG_PTR.

2012-07-06  Corinna Vinschen  <corinna@vinschen.de>

	Extend visibility of winsock definitions when building Cygwin.

	* include/winsock.h [__INSIDE_CYGWIN__]: Expose definitions of...
	(IP_OPTIONS, SO_DEBUG, SO_ACCEPTCONN, SO_REUSEADDR, SO_KEEPALIVE)
	(SO_DONTROUTE, SO_BROADCAST, SO_USELOOPBACK, SO_LINGER, SO_OOBINLINE)
	(SO_DONTLINGER, SO_SNDBUF, SO_RCVBUF, SO_SNDLOWAT, SO_RCVLOWAT)
	(SO_SNDTIMEO, SO_RCVTIMEO, SO_ERROR, SO_TYPE): ...these; however...
	[__INSIDE_MSYS__]: ...keep them hidden.

	* include/winsock2.h [__INSIDE_CYGWIN__]: Likewise, expose...
	(AF_MAX, _SS_MAXSIZE, _SS_ALIGNSIZE, _SS_PAD1SIZE, _SS_PAD2SIZE)
	(struct sockaddr, struct sockaddr_storage): ...these, whereas...
	[__INSIDE_MSYS__]: ...also keep them hidden.

2012-04-29  Jan Ringos  <tringi@users.sf.net>

	Correct version guard for WinXP minimum requirement.

	* include/winbase.h (GetModuleHandleEx): Function unsupported for...
	[_WIN32_WINNT >= 0x500]: ...this; it isn't in Win2K, so should be...
	[_WIN32_WINNT >= 0x501]: ...this; correct it accordingly.
	(GetModuleHandleExA, GetModuleHandleExW): Likewise.

2012-04-28  LRN  <l_r_nightmare@users.sf.net>

	Add missing <shobjidl.h> and associated UUID implementation.

	* include/shobjidl.h lib/shobjidl-uuid.c: New files.
	* lib/Makefile.in (UUID_SOURCES, UUID_OBJS): Add references.

2012-03-19  Ben Greear  <greear@users.sf.net>

	Adjust header file definition order, to fix issue [#1570].

	* include/routprot.h (IP_LOCAL_BINDING): Must be defined before...
	(IP_ADAPTER_BINDING_INFO): ...this; adjust order of definition.

2012-01-03  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	Add missing return value, flagged by 'make test'.

	* include/gdiplus/gdiplustypes.h (Gdiplus::GdiplusAbort::Abort):