@@ -168,6 +168,56 @@ BOOL WTSSendMessageW(
 #define WTSSendMessage WTSSendMessageA
 #endif
 
+BOOL WTSVirtualChannelClose(
+  HANDLE hChannelHandle
+);
+
+HANDLE WTSVirtualChannelOpen(
+  HANDLE hServer,
+  DWORD SessionId,
+  LPSTR pVirtualName
+);
+
+#if (_WIN32_WINNT >= 0x600)
+HANDLE WTSVirtualChannelOpenEx(
+  DWORD SessionId,
+  LPSTR pVirtualName,
+  DWORD flags
+);
+#endif
+
+BOOL WTSVirtualChannelPurgeInput(
+  HANDLE hChannelHandle
+);
+
+BOOL WTSVirtualChannelPurgeOutput(
+  HANDLE hChannelHandle
+);
+
+#if (_WIN32_WINNT >= 0x501)
+BOOL WTSVirtualChannelQuery(
+  HANDLE hChannelHandle,
+  WTS_VIRTUAL_CLASS WtsVirtualClass,
+  PVOID *ppBuffer,
+  DWORD *pBytesReturned
+);
+#endif
+
+BOOL WTSVirtualChannelRead(
+  HANDLE hChannelHandle,
+  ULONG TimeOut,
+  PCHAR Buffer,
+  ULONG BufferSize,
+  PULONG pBytesRead
+);
+
+BOOL WTSVirtualChannelWrite(
+  HANDLE hChannelHandle,
+  PCHAR Buffer,
+  ULONG Length,
+  PULONG pBytesWritten
+);
+
 #endif /* _WIN32_WINNT >= 0x0500 */
 
 #ifdef __cplusplus
